enable html5 mode

--- a/static/board.html
+++ b/static/board.html
@@ -1,9 +1,10 @@
 <html ng-app="boardApp">
 <head>
-<script src="./javascript/angular.js"></script>
-<script src="./javascript/angular-resource.js"></script>
-<script src="./javascript/angular-route.js"></script>
-<script src="./javascript/board.js"></script>
+<script src="/static/javascript/angular.js"></script>
+<script src="/static/javascript/angular-resource.js"></script>
+<script src="/static/javascript/angular-route.js"></script>
+<script src="/static/javascript/board.js"></script>
+<base href="/">
 </head>
 <body>
 	<nav>
