fix links for html5 mode

--- a/static/board.html
+++ b/static/board.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 	<nav>
-		<a href="#/">Home</a>
-		<a href="#employees">Employees</a>
+		<a href="/">Home</a>
+		<a href="/employees">Employees</a>
 	</nav>
 	<section ng-view></section>
 </body>
