--- a/static/board.html
+++ b/static/board.html
@@ -11,6 +11,7 @@
 	<nav>
 		<a href="/">Home</a>
 		<a href="/employees">Employees</a>
+		<a href="/locations">Locations</a>
 	</nav>
 	<section ng-view></section>
 </body>
