--- a/static/board.html
+++ b/static/board.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html ng-app="boardApp">
 <head>
-<script src="/static/javascript/angular.js"></script>
-<script src="/static/javascript/angular-resource.js"></script>
-<script src="/static/javascript/angular-route.js"></script>
-<script src="/static/javascript/board.js"></script>
+<link href="/static/css/bootstrap.css">
+<script src="/static/js/angular.js"></script>
+<script src="/static/js/angular-resource.js"></script>
+<script src="/static/js/angular-route.js"></script>
+<script src="/static/js/board.js"></script>
+<script src="/static/js/bootsrap.js"></script>
 <base href="/">
 </head>
 <body>
