--- a/static/board.html
+++ b/static/board.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html ng-app="boardApp">
 <head>
-<link href="/static/css/bootstrap.css">
-<script src="/static/js/angular.js"></script>
-<script src="/static/js/angular-resource.js"></script>
-<script src="/static/js/angular-route.js"></script>
-<script src="/static/js/board.js"></script>
-<script src="/static/js/bootsrap.js"></script>
-<base href="/">
+	<link href="/static/css/bootstrap.css">
+	<link href="/static/css/bootstrap-theme.css">
+	<script src="/static/js/jquery-1.11.1.min.js"></script>
+	<script src="/static/js/angular.js"></script>
+	<script src="/static/js/angular-resource.js"></script>
+	<script src="/static/js/angular-route.js"></script>
+	<script src="/static/js/bootstrap.js"></script>
+	<script src="/static/js/ui-bootstrap-tpls-0.12.0.js"></script>
+	<script src="/static/js/board.js"></script>
+	<base href="/">
 </head>
 <body>
 	<nav>
