moved js, css, and font files I didn't write into /vendor directory

--- a/static/board.html
+++ b/static/board.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html ng-app="boardApp">
 <head>
-	<script src="/static/js/jquery-1.11.1.min.js"></script>
-	<script src="/static/js/angular.js"></script>
-	<script src="/static/js/angular-resource.js"></script>
-	<script src="/static/js/angular-route.js"></script>
-	<script src="/static/js/ui-bootstrap-tpls-0.12.0.js"></script>
+	<script src="/static/vendor/js/jquery-1.11.1.min.js"></script>
+	<script src="/static/vendor/js/angular.js"></script>
+	<script src="/static/vendor/js/angular-resource.js"></script>
+	<script src="/static/vendor/js/angular-route.js"></script>
+	<script src="/static/vendor/js/ui-bootstrap-tpls-0.12.0.js"></script>
 	<script src="/static/js/board.js"></script>
-	<link href="/static/css/bootstrap.css" rel="stylesheet">
-	<link href="/static/css/bootstrap-theme.css" rel="stylesheet">
+	<link href="/static/vendor/css/bootstrap.css" rel="stylesheet">
+	<link href="/static/vendor/css/bootstrap-theme.css" rel="stylesheet">
 	<base href="/">
 </head>
 <body>
